welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: type StringA
if(litMessage():StringA){avance();} 
                ^